1.7.112 Disregard difference in type and memo in identifying alchemical terms.
1.7.111 Support for gromacs files (gro, g96, trr, trj, xtc).
        Build with C++11.
        Better error handling in dms export.

1.7.110 Stk cache files are placed alongside original stk.
        DtrReader class supports sequential reading for stk.

1.7.109 Revert the 1.7.103 changes to structure_only.  structure_only now
        excludes pseudos.  Also excluded in mae files (previously wasn't).

        Added new without_tables option to Load(), which causes term tables
        to be ignored during loading but otherwise gives you all particles.

1.7.108 Another shot at build fixes.

1.7.107 Build fixes.

1.7.106 Added --unrotate option to dms-frame.

1.7.105 Smiles functionality factored out into its own garden module.

1.7.104 Experimental SMILES parsing.
        Added LoadSDF function.
        The mol2 exporter mistakenly assigned C.cat atom type in some cases.
        
1.7.103 Loading structure-only now includes pseudos.
        Fix a bug in import where residues were sometimes erroneously split.

1.7.100 No more versioned libmsys.so.

1.7.99 Create a versioned libmsys.so.
       Fix molfile-based reading of dms with pseudos.
       More HBond finder improvements.
       Added raw dtr I/O support for Python.

1.7.98 Better xyz, dx, and Amber prm/rst7 file support.
       HBondFinder allows multiple donor hydrogens.
       Eliminate primegen dependency.
       
1.7.97 Fix mol2 bond type output.
       Fix molfile xyz plugin.
       Added dx plugin.

1.7.96 Fix mol2 atom type output.

1.7.95 Fix the /lib submodule, which behaved differently under garden.

1.7.94 Bump lp_solve version to get tighter symbol visibility.
       Fix race condition in build script.
       mol2 exporter now always assigns Sybyl atom types.
       
1.7.93 Hydrogen bond finder.

1.7.92 Added weights option to Pfx.align.
       Fix OSX compilation issues.
       Enhance molfile.Timekeys Python interface.
